css/index.css
/* Use your own code or past solution for Great Idea Web Page CSS here! */

* {
    font-size: 16px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
}

html,
body {
    height: 100%;
    font-family: 'Mansalva', cursive;
}

h1,
h2,
h3,
h4,
h5 {
    font-family: 'Mansalva', cursive;
    letter-spacing: 3px;
    margin-bottom: 15px;
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem 10%;
}

nav ul li {
    display: inline-block;
    padding: 0 2rem;
    border-bottom: 1px solid black;
    line-height: 3rem;
    border-radius: 50%;
}



/*  Flex Pre-Layout */

.row {
    display: flex;
    flex-direction: row;
    max-width: 80rem;
    margin: auto;
    flex-wrap: wrap;
}

.row-r {
    display: flex;
    flex-direction: row-reverse;
    max-width: 80rem;
    margin: auto;
    flex-wrap: wrap;
}

.col {
    display: flex;
    margin: 1rem;
}

.col-1-of-1 {
    justify-content: center;
    width: calc(100% - 2rem);
}

.col-1-of-2 {
    justify-content: center;
    width: calc(50% - 2rem);
}

.col-1-of-3 {
    justify-content: center;
    width: calc(33% - 2rem);
}

.col-1-of-4 {
    justify-content: center;
    width: calc(25% - 2rem);
}

/* Columns */

.col-1-of-2 .top-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* Rows */

.footer .col-1-of-2 {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 2rem;
}

/* Images */

.middle-img {
    max-width: 100%;
    width: 100%;
    max-height: auto;
}

.logo {
    margin-left: 3rem;
}

/*  Cards */

.top-card {
    margin: 1rem 0 1rem 0;
}

.cards {
    padding: 1rem;
    margin: 1rem;
}

.cards h2 {
    margin-bottom: 1rem;
}

/* Misc */

#copyright {
    text-align: center;
}

hr {
    width: 96%;
    height: 3px;
    background-color: black;
}

.top-card h1 {
    font-size: 3rem;
}

.top-card button {
    border: 1px solid black;
    font-weight: 200;
    background-color: transparent;
    text-decoration: none;
    padding: 3px 5%;
}

.top-card button:hover {
    background-color: yellow;
    border: 1px solid black;
    position: relative;
    bottom: -1px;
}

/*  Media Queries */


@media (max-width: 1024px) {
    header {
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        background: rgb(0, 255, 255, 0.3);
        border-bottom: 1px solid black;
    }

    nav ul {
        display: flex;
        flex-direction: row;
        align-items: center;
    }

    nav ul li {
        display: flex;
        justify-content: center;
        margin-bottom: 1rem;
        border-radius: 0;
        border: none;
    }

    .row {
        display: flex;
        flex-direction: row;
        justify-content: center;
        max-width: 80rem;
        margin: auto;
        flex-wrap: wrap;
    }

    .col {
        display: flex;
        margin: 1rem;
    }

    .col-1-of-2 {
        display: flex;
        justify-content: center;
        width: calc(50% - 2rem);
    }

    .col-1-of-3 {
        justify-content: center;
        width: calc(33% - 2rem);
    }

    .footer .col-1-of-2 {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        padding: 2rem;
        width: 100%;

    }

    .logo {
        margin: 1rem auto 2rem auto;
    }

    .top-card-img {
        display: none;
    }
}

@media (max-width: 800px) {
    header {
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        background: rgb(0, 255, 255, 0.3);
        border-bottom: 1px solid black;
    }

    nav ul {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    nav ul li {
        display: flex;
        justify-content: center;
        margin-bottom: 1rem;
        border-radius: 0;
        border: none;
        border-bottom: 1px solid black;
        width: 100%;
    }

    .row {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
    }

    .col {
        width: 95%;
        margin-left: auto;
        margin-right: auto;
    }

    .logo {
        margin: 1rem auto 2rem auto;
    }

    .top-card-img {
        display: none;
    }
}

@media (max-width: 500px) {
    header {
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        background: rgb(0, 255, 255, 0.3);
        border-bottom: 1px solid black;
    }

    nav ul {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    nav ul li {
        display: flex;
        justify-content: center;
        margin-bottom: 1rem;
        border-radius: 0;
        border: none;
        border-bottom: 1px solid black;
        width: 100%;
    }

    .row {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
    }

    .col {
        width: 95%;
        margin-left: auto;
        margin-right: auto;
    }

    .logo {
        margin: 1rem auto 2rem auto;
    }

    .top-card-img {
        display: none;
    }
}

